exercises/networking/cka/03-networkpolicy/client-blocked.yaml
apiVersion: v1
kind: Pod
metadata:
  name: client-blocked
  namespace: cka-net-3
  labels:
    access: blocked
spec:
  containers:
  - name: busy
    image: busybox:1.36
    command: ["sh", "-c", "sleep 3600"]
