exercises/networking/cka/03-networkpolicy/client-ok.yaml
apiVersion: v1
kind: Pod
metadata:
  name: client-ok
  namespace: cka-net-3
  labels:
    access: allowed
spec:
  containers:
  - name: busy
    image: busybox:1.36
    command: ["sh", "-c", "sleep 3600"]
