exercises/networking/cka/03-networkpolicy/api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  namespace: cka-net-3
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
